add mmemory fix more ci tests